samples/_failures_safe/1761158979_108251_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18fb6ca4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_18fb6ca4.c:163:21: error: expected ‘;’ at end of input
  163 |     token_array_push
      |                     ^
      |                     ;
./samples/SAFE/__tmp_18fb6ca4.c:163:5: error: expected declaration or statement at end of input
  163 |     token_array_push
      |     ^~~~~~~~~~~~~~~~
